# whisper

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  requirements.txt  server.py  whisper_api.py
lib/: __init__.py  core.py  dictionary.py  formats.py  vocabulary.py
scripts/: batch_transcribe.sh
tests/: test_dictionary.py  test_formats.py  test_vocabulary.py
vocabularies/: family.dict.json  family_vocabulary.txt  general_vocabulary.txt
